kube/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce-devops
  labels:
    name: ecommerce-devops
    environment: production
